syntax = "proto3";

package products_svc;

option go_package = "github.com/kika72/prod_catalog/services/proto/build/products";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Products {
    rpc Fetch(FetchRequest) returns (google.protobuf.Empty);
    rpc List(ListRequest) returns (ListResponse);
}

message FetchRequest {
    string url = 1;
}

message ListRequest {
    int64 offset = 1;
    int64 limit = 2;
    repeated SortParam sort = 4;
}

message SortParam {
    string field = 1;
    int32 order = 2;
}

message ListResponse {
    repeated Product items = 1;
}

message Product {
    string name = 1;
    double price = 2;
    int64 updatesCount = 3;
    google.protobuf.Timestamp updatedAt = 4;
}